crates/cursor_cloud_agents/src/replay/snapshots/cursor_cloud_agents__replay__test__fixtures_translate_to_their_pinned_snapshot@thinking_only.sse.snap
---
source: crates/cursor_acp/src/replay/test.rs
assertion_line: 210
expression: updates(sse)
input_file: crates/cursor_acp/fixtures/real/thinking_only.sse
---
[
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": "Preparing a pull request"
    }
  },
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": " with a one-line test"
    }
  },
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": " appended to the README"
    }
  },
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": " change."
    }
  },
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": "\n\nChecking the repository"
    }
  },
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": " state and existing "
    }
  },
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": "README changes."
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": "I'll"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " inspect"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " the"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " repo"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " and"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " README"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " so"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " I"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " can"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " add"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " a"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " one"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": "-"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": "line"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " TEST"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " at"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " the"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " bottom"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " and"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " open"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " a"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " PR"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": "."
    }
  }
]
