crates/cursor_cloud_agents/src/replay/snapshots/cursor_cloud_agents__replay__test__tool_calls_and_their_kinds_are_pinned@list_and_delete.sse.snap
---
source: crates/cursor_acp/src/replay/test.rs
assertion_line: 199
expression: calls
input_file: crates/cursor_acp/fixtures/real/list_and_delete.sse
---
[
    "tool_call \"file_search\" kind=Search status=InProgress",
    "  update   Some(\"file_search\") kind=Some(Search) status=Some(InProgress)",
    "tool_call \"read_file\" kind=Read status=InProgress",
    "  update   Some(\"read_file\") kind=Some(Read) status=Some(InProgress)",
    "tool_call \"file_search\" kind=Search status=InProgress",
    "  update   Some(\"file_search\") kind=Some(Search) status=Some(InProgress)",
    "  update   Some(\"file_search\") kind=Some(Search) status=Some(Completed)",
    "  update   Some(\"read_file\") kind=Some(Read) status=Some(Completed)",
    "  update   Some(\"file_search\") kind=Some(Search) status=Some(Completed)",
    "tool_call \"run_terminal_cmd\" kind=Execute status=InProgress",
    "tool_call \"delete_file\" kind=Delete status=InProgress",
    "  update   Some(\"delete_file\") kind=Some(Delete) status=Some(InProgress)",
    "  update   Some(\"delete_file\") kind=Some(Delete) status=Some(Failed)",
    "  update   Some(\"run_terminal_cmd\") kind=Some(Execute) status=Some(Completed)",
    "tool_call \"run_terminal_cmd\" kind=Execute status=InProgress",
    "  update   Some(\"run_terminal_cmd\") kind=Some(Execute) status=Some(Completed)",
]
