crates/cursor_cloud_agents/src/replay/snapshots/cursor_cloud_agents__replay__test__tool_calls_and_their_kinds_are_pinned@mcp_servers.sse.snap
---
source: crates/cursor_acp/src/replay/test.rs
assertion_line: 199
expression: calls
input_file: crates/cursor_acp/fixtures/real/mcp_servers.sse
---
[
    "tool_call \"get_mcp_tools\" kind=Other status=InProgress",
    "  update   Some(\"get_mcp_tools\") kind=Some(Other) status=Some(InProgress)",
    "  update   Some(\"get_mcp_tools\") kind=Some(Other) status=Some(Completed)",
]
