crates/cursor_cloud_agents/src/replay/snapshots/cursor_cloud_agents__replay__test__tool_calls_and_their_kinds_are_pinned@multi_turn_1.sse.snap
---
source: crates/cursor_acp/src/replay/test.rs
assertion_line: 201
expression: calls
input_file: crates/cursor_acp/fixtures/real/multi_turn_1.sse
---
[]
